--- a/FRONTEND/app/src/main/res/layout/activity_board_write.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_board_write.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF3F0"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.Community.BoardWriteActivity">
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="3dp"
-        android:background="#B2CCFF" />
+        android:background="@color/colorPrimary" />
 
     <EditText
         android:id="@+id/board_write_edittext_title"
@@ -24,12 +24,17 @@
         android:layout_width="fill_parent"
         android:layout_height="3dp" />
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="3dp"
+        android:background="@color/colorPrimaryDark" />
+
     <EditText
         android:id="@+id/board_write_edittext_content"
         android:layout_width="fill_parent"
-        android:layout_height="200dp"
-        android:layout_margin="10dp"
-        android:background="@color/colorWhite"
+        android:layout_height="230dp"
+        android:layout_margin="-10dp"
+        android:background="@color/colorAccent"
         android:gravity="top|start"
         android:hint="내용을 입력해주세요" />
 
