--- a/FRONTEND/app/src/main/res/layout/activity_login.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_login.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF3F0"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Home.LoginActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
-
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_marginTop="-100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/login" />
 
         <EditText
             android:id="@+id/adult_login_edittext_id"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:background="#8DC0E5"
+            android:background="@color/colorAccent"
             android:gravity="center"
             android:hint="이메일을 입력해 주세요"
             android:text="admin@admin.com"
@@ -29,13 +36,14 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:background="#8DC0E5"
+            android:background="@color/colorAccent"
             android:gravity="center"
             android:hint="로봇 비밀번호를 입력해 주세요"
             android:text="1234"
             android:textColor="@color/colorWhite" />
 
         <LinearLayout
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -44,6 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_background"
+                android:layout_margin="5dp"
                 android:text="로그인"
                 android:textColor="@color/colorWhite" />
 
@@ -53,8 +62,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_background"
                 android:text="회원 등록"
+                android:layout_margin="5dp"
                 android:textColor="@color/colorWhite" />
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
