--- a/FRONTEND/app/src/main/res/layout/activity_play_kids_main.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_play_kids_main.xml
@@ -7,46 +7,50 @@
     android:layout_height="match_parent"
     tools:context=".Kids.PlayKidsMain">
 
-    <!--<Button-->
-        <!--android:id="@+id/playWithRobot"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginTop="141dp"-->
-        <!--android:background="@drawable/round_background"-->
-        <!--android:textColor="@color/colorWhite"-->
-        <!--android:text="로봇과 놀기" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:layout_marginTop="60dp">
 
-    <!--<Button-->
-        <!--android:id="@+id/wordGame"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@drawable/round_background"-->
-        <!--android:textColor="@color/colorWhite"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginBottom="208dp"-->
-        <!--android:text="단어게임" />-->
+        <ImageButton
+            android:id="@+id/playWithRobot"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF3F0"
+            android:layout_margin="10dp"
+            app:srcCompat="@drawable/playrobot_icon" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="로봇과 놀기"
+            android:gravity="center"/>
+    </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/wordGame"
-        android:background="#FFF3F0"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:orientation="vertical"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="139dp"
-        app:srcCompat="@drawable/wordgame_icon" />
+        android:layout_marginBottom="70dp">
 
-
-    <ImageButton
-        android:background="#FFF3F0"
-        android:id="@+id/playWithRobot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="89dp"
-        app:srcCompat="@drawable/playrobot_icon" />
+        <ImageButton
+            android:id="@+id/wordGame"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF3F0"
+            app:srcCompat="@drawable/wordgame_icon" />
+        <TextView
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="단어 게임"/>
+    </LinearLayout>
 </RelativeLayout>
