--- a/FRONTEND/app/src/main/res/layout/activity_success_word.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_success_word.xml
@@ -37,7 +37,7 @@
         android:background="@drawable/round_background"
         android:gravity="center_vertical|center_horizontal"
         android:text="축하합니다! \n 정말 잘했어요!"
-        android:textColor="@string/Kcolor4"
+        android:textColor="@color/colorAccent"
         android:textSize="20dp" />
 
     <ImageView
