--- a/FRONTEND/app/src/main/res/layout/item_todolist.xml
+++ b/FRONTEND/app/src/main/res/layout/item_todolist.xml
@@ -32,6 +32,11 @@
             android:text="New Text"
             android:textColor="#666666"
             android:textSize="16dp" />
+
+        <Button
+            android:id="@+id/todo_list_button_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
