--- a/FRONTEND/app/src/main/res/layout/item_boardlist.xml
+++ b/FRONTEND/app/src/main/res/layout/item_boardlist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_margin="15dp"
-    android:background="#FFF3F0"
+    android:background="@drawable/round_background2"
     android:orientation="horizontal"
 
     android:padding="10dp">
@@ -45,7 +45,7 @@
                 android:layout_width="25dp"
                 android:layout_height="35dp"
                 android:layout_margin="2dp"
-                android:background="@drawable/binoculars" />
+                android:background="@drawable/friends" />
 
             <TextView
                 android:id="@+id/itemboard_textview_hits"
