--- a/FRONTEND/app/src/main/res/layout/item_todolist.xml
+++ b/FRONTEND/app/src/main/res/layout/item_todolist.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:layout_margin="15dp"
-    android:background="@color/colorWhite"
+    android:background="@drawable/round_background2"
     android:orientation="horizontal">
 
     <LinearLayout
