--- a/FRONTEND/app/src/main/res/layout/activity_login.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_login.xml
@@ -13,46 +13,68 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/imageView"
-            android:layout_marginTop="-100dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-100dp"
             app:srcCompat="@drawable/login" />
 
         <EditText
             android:id="@+id/adult_login_edittext_id"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+
             android:background="@color/colorAccent"
             android:gravity="center"
-            android:hint="이메일을 입력해 주세요"
-            android:text="admin@admin.com"
+            android:hint="Email"
             android:textColor="@color/colorWhite" />
 
         <EditText
             android:id="@+id/adult_login_edittext_pw"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
             android:background="@color/colorAccent"
             android:gravity="center"
-            android:hint="로봇 비밀번호를 입력해 주세요"
-            android:text="1234"
+            android:hint="Password"
+            android:inputType="textPassword"
             android:textColor="@color/colorWhite" />
 
         <LinearLayout
-            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="자동 로그인" />
+
+            <CheckBox
+                android:id="@+id/login_checkbox_auto_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
 
             <Button
                 android:id="@+id/adult_login_button_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_background"
                 android:layout_margin="5dp"
+                android:background="@drawable/round_background"
                 android:text="로그인"
                 android:textColor="@color/colorWhite" />
 
@@ -60,9 +82,9 @@
                 android:id="@+id/adult_login_button_join"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 android:background="@drawable/round_background"
                 android:text="회원 등록"
-                android:layout_margin="5dp"
                 android:textColor="@color/colorWhite" />
         </LinearLayout>
 
