--- a/FRONTEND/app/src/main/res/layout/fragment_my_page.xml
+++ b/FRONTEND/app/src/main/res/layout/fragment_my_page.xml
@@ -15,11 +15,12 @@
         android:textSize="15sp" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_landmark_recyclerView_userrecyclerview"
+        android:id="@+id/mypage_recyvlerview_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_margin="20dp"
-        android:background="@color/colorWhite"></android.support.v7.widget.RecyclerView>
+        android:background="@color/colorWhite"
+        tools:listitem="@layout/item_my_board"></android.support.v7.widget.RecyclerView>
 
     <Button
         android:id="@+id/mypage_button_logout"
@@ -28,10 +29,4 @@
         android:layout_gravity="center"
         android:text="로그아웃" />
 
-    <Button
-        android:id="@+id/mypage_button_mypage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="정보수정" />
 </LinearLayout>
