--- a/FRONTEND/app/src/main/res/layout/item_to_do_list_adult.xml
+++ b/FRONTEND/app/src/main/res/layout/item_to_do_list_adult.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFD8D8">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:padding="10dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/round_background2">
 
     <TextView
         android:id="@+id/todo_list_todo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="NEW TITLE"/>
 
-    <ImageButton
-        android:id="@+id/to_do_delete"
+    <ImageView
+        android:id="@+id/to_do_isdo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="20dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/bin"/>
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/unchecked"/>
 
 </RelativeLayout>
