--- a/FRONTEND/app/src/main/res/layout/item_to_do_list_kids.xml
+++ b/FRONTEND/app/src/main/res/layout/item_to_do_list_kids.xml
@@ -8,28 +8,28 @@
     android:background="#FFD8D8"
     >
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="10dp"
         android:layout_weight="4"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/todo_list_todo"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:text="New Text"
             android:textColor="#000000"
-            android:textSize="19dp" />
+            android:textSize="20dp" />
 
         <ImageView
             android:id="@+id/todo_list_isdo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/unchecked"
-            android:text="New Text"
-            android:textColor="#666666" />
+            android:layout_alignRight="@+id/todo_list_todo"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/unchecked" />
     </RelativeLayout>
 </LinearLayout>
